--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
 /*FONTS FILES*/
 @font-face {
     font-family: 'nunito sans';
-    src: url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
-    src: url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@1&display=swap');
-    src: url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap');
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    src: url(/fonts/nunito-sans/NunitoSans-Regular.ttf);
+    src: url(/fonts/nunito-sans/NunitoSans-Italic.ttf);
+    src: url(/fonts/nunito-sans/NunitoSans-Bold.ttf);
 }
 
-body {
-   font-family: 'montserrat';
+@font-face {
+    font-family: 'montserrat';
+}
+
+h1 {
+  
+ 
 }
