--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: 'roboto';
-    src: url();
-    src: url();
-    src: url();  
+    src: url(fonts/roboto/Roboto-Regular.ttf);
+    src: url(fonts/roboto/Roboto-Italic.ttf);
+    src: url(fonts/roboto/Roboto-Bold.ttf);  
 }
