--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,11 @@ body {
     color: #161716;
     margin: 0 10%;
 }
+
+h1 {
+    font-size: 35px;
+    
+}
 .color-container, .fonts-container, .styles-container {
     border: 3px solid #a2a2a6;
     margin: 30px 30px;
@@ -33,4 +38,29 @@ body {
     overflow: auto;
     border-radius: 20px;
 }
-    
+
+/*COLORS SECTION*/
+.color-yellow, .color-blue, .color-red, .color-gray {
+    display: inline-block;
+    margin-right: 30px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-radius: 15%;
+    border: 2px solid #a2a2a6;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    vertical-align: middle;
+    text-align: center;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 28px;
+}
+
+.color-yellow {
+    background-color: #FFFF33;
+}
+
+.color-blue {
+    background-color: #0000FF;
+}
