--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h1 {
     margin-top: 5px;
     margin-bottom: 10px;
     border-radius: 15%;
-    border: 2px solid #a2a2a6;
+    border: 3px solid #a2a2a6;
     padding: 10px;
     width: 200px;
     height: 200px;
@@ -63,4 +63,12 @@ h1 {
 
 .color-blue {
     background-color: #0000FF;
+}
+
+.color-red {
+    background-color: #FF0000;
+}
+
+.color-gray {
+    background-color: #444444;
 }
