--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 
 body {
     font-family: 'montserrat';
-    background-color: whitesmoke;
+    background-color: #ffffff;
     color: #161716;
     margin: 0 10%;
 }
